--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
         </div>
 
+            <ul>
+                <li>
+                    <a href="">Korábbi sorsolások</a>
+                </li>
+
+            </ul>
+
         <div class="lap">
             
         </div>
