--- a/leghosszabsorozat.html
+++ b/leghosszabsorozat.html
@@ -1,2 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leghosszab számsorozat</title>
+</head>
+<body>
+    
+</body>
 </html>
