--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lottó</title>
 </head>
 <body>
     <div class="container">
@@ -17,7 +17,24 @@
                 <li>
                     <a href="">Korábbi sorsolások</a>
                 </li>
-
+                <li>
+                    <a href="">Leggyakoribb számok</a>
+                </li>
+                <li>
+                    <a href="">Leghasonlóbb számsorok</a>
+                </li>
+                <li>
+                    <a href="">Leghoszabb sorozatok számsorokban</a>
+                </li>
+                <li>
+                    <a href="">Legkisebb összegű számsorok</a>
+                </li>
+                <li>
+                    <a href="">Grafikonok</a>
+                </li>
+                <li>
+                    <a href="">Érdekes történetek</a>
+                </li>
             </ul>
 
         <div class="lap">
