--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>Lottó</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="kontener">
         
-        <div class="menu">
+        <div class="menu" id="mennu">
 
         </div>
+
+
+            <img src="" width="50px" id="zoldlottokor">
 
             <ul>
                 <li>
@@ -37,7 +40,7 @@
                 </li>
             </ul>
 
-        <div class="lap">
+        <div class="lap" id="lap">
             
         </div>
 
