--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         </div>
 
 
-            <img src="" width="50px" id="zoldlottokor">
+            <img src="https://turristvanszakkozepisk-my.sharepoint.com/personal/tardosjuliannaorsolya_turr_hu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftardosjuliannaorsolya%5Fturr%5Fhu%2FDocuments%2FMicrosoft%20Teams%20Chat%20Files%2FMicrosoftTeams%2Dimage%20%289%29%2Epng&parent=%2Fpersonal%2Ftardosjuliannaorsolya%5Fturr%5Fhu%2FDocuments%2FMicrosoft%20Teams%20Chat%20Files&ga=1"
+             width="50px" id="zoldlottokor">
 
             <ul>
                 <li>
