--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
         </div>
 
 
-            <img src="https://turristvanszakkozepisk-my.sharepoint.com/personal/tardosjuliannaorsolya_turr_hu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Ftardosjuliannaorsolya%5Fturr%5Fhu%2FDocuments%2FMicrosoft%20Teams%20Chat%20Files%2FMicrosoftTeams%2Dimage%20%289%29%2Epng&parent=%2Fpersonal%2Ftardosjuliannaorsolya%5Fturr%5Fhu%2FDocuments%2FMicrosoft%20Teams%20Chat%20Files&ga=1"
+            <img src="https://user-images.githubusercontent.com/98745264/161496174-f234c0a8-4fdc-4a08-9b91-cf55e0ecc38c.png"
              width="50px" id="zoldlottokor">
+
+        <h1>Korábbi sorsolások</h1>
+        
+        <br>
+
+        <p class="golyoszoveg">Az elöző heti nyerőszámok</p>
+
+        <p class="golyoszoveg">Az múlt heti nyerőszámok</p>
 
             <ul>
                 <li>
