--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
             <img src="https://user-images.githubusercontent.com/98745264/161496174-f234c0a8-4fdc-4a08-9b91-cf55e0ecc38c.png"
-             width="50px" id="zoldlottokor">
+             height="100px" width="100px" id="zoldlottokor">
 
         <h1>Korábbi sorsolások</h1>
         
