--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <ul>
                 <li>
-                    <a href="">Korábbi sorsolások</a>
+                    <button onclick="location.href='korabbisorsolasok.html'>Go home</button>
                 </li>
                 <li>
                     <a href="">Leggyakoribb számok</a>
@@ -29,7 +29,7 @@
                     <a href="">Leghasonlóbb számsorok</a>
                 </li>
                 <li>
-                    <a href="">Leghoszabb sorozatok számsorokban</a>
+                    <button onclick="location.href='leghoszabbsorozat.html'>Go home</button>
                 </li>
                 <li>
                     <a href="">Legkisebb összegű számsorok</a>
