--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 
             <ul>
                 <li>
-                    <a href="">Korábbi sorsolások</a>
+                    <a href="korabbisorsolasok.html">Korábbi sorsolások</a>
                 </li>
                 <li>
-                    <a href="">Leggyakoribb számok</a>
+                    <a href="leggyakoribbszamok.html">Leggyakoribb számok</a>
                 </li>
                 <li>
-                    <a href="">Leghasonlóbb számsorok</a>
+                    <a href="leghasonlobbszamsorok.html">Leghasonlóbb számsorok</a>
                 </li>
                 <li>
-                    <a href="">Leghoszabb sorozatok</a>
+                    <a href="leghosszabsorozat.html">Leghoszabb sorozatok számsorokban</a>
                 </li>
                 <li>
-                    <a href="">Legkisebb összegű számsorok</a>
+                    <a href="legkisebbosszeg.html">Legkisebb összegű számsorok</a>
                 </li>
                 <li>
-                    <a href="">Grafikonok</a>
+                    <a href="grafikonok.html">Grafikonok</a>
                 </li>
                 <li>
-                    <a href="">Érdekes történetek</a>
+                    <a href="tortenet.html">Érdekes történetek</a>
                 </li>
             </ul>
 
