--- a/leghosszabsorozat.html
+++ b/leghosszabsorozat.html
@@ -19,7 +19,7 @@
 
             <ul>
                 <li>
-                    <a href="korabbisorsolasok.html">Korábbi sorsolások</a>
+                    <a href="index.html">Korábbi sorsolások</a>
                 </li>
                 <li>
                     <a href="leggyakoribbszamok.html">Leggyakoribb számok</a>
