index.htmlben a leggyakoribb.htmlre való utalás átjavítása index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <ul>
                 <li>
-                    <a href="korabbisorsolasok.html">Korábbi sorsolások</a>
+                    <a href="index.html">Korábbi sorsolások</a>
                 </li>
                 <li>
                     <a href="leggyakoribbszamok.html">Leggyakoribb számok</a>
