Leggyakoribbbam a képek IDjét átírtam classra.

--- a/leggyakoribbszamok.html
+++ b/leggyakoribbszamok.html
@@ -50,11 +50,11 @@
         
         <br>
 
-        <p class="golyoszoveg">#1 <img id="golyo" src="https://raw.githubusercontent.com/Sauher/Csapatmunka/main/MicrosoftTeams-image.png"> 218 db</p>
+        <p class="golyoszoveg">#1 <img class="golyo" src="https://raw.githubusercontent.com/Sauher/Csapatmunka/main/MicrosoftTeams-image.png"> 218 db</p>
 
-        <p class="golyoszoveg">#2 <img id="golyo" src="https://raw.githubusercontent.com/Sauher/Csapatmunka/1c19eaa724c69c4542c1f6af075f5e0167919372/MicrosoftTeams-image%20(2).png"> 209 db</p>
+        <p class="golyoszoveg">#2 <img class="golyo" src="https://raw.githubusercontent.com/Sauher/Csapatmunka/1c19eaa724c69c4542c1f6af075f5e0167919372/MicrosoftTeams-image%20(2).png"> 209 db</p>
 
-        <p class="golyoszoveg">#3 <img id="golyo" src="https://raw.githubusercontent.com/Sauher/Csapatmunka/1c19eaa724c69c4542c1f6af075f5e0167919372/MicrosoftTeams-image%20(1).png"> 208 db</p>
+        <p class="golyoszoveg">#3 <img class="golyo" src="https://raw.githubusercontent.com/Sauher/Csapatmunka/1c19eaa724c69c4542c1f6af075f5e0167919372/MicrosoftTeams-image%20(1).png"> 208 db</p>
 
             
         </div>
