Menu elemének javítása

--- a/grafikonok.html
+++ b/grafikonok.html
@@ -29,7 +29,7 @@
                     <a href="leghasonlobbszamsorok.html">Leghasonlóbb számsorok</a>
                 </li>
                 <li>
-                    <a href="leghosszabsorozat.html">Leghoszabb sorozatok számsorokban</a>
+                    <a href="leghosszabsorozat.html">Leghoszabb sorozatok </a>
                 </li>
                 <li>
                     <a href="legkisebbosszeg.html">Legkisebb összegű számsorok</a>
