történet.html történetek átírása

--- a/tortenet.html
+++ b/tortenet.html
@@ -53,9 +53,9 @@
         <br>
 
         <p class="golyoszoveg">1. történet</p>
-
+            <p class="tortenet">Nos, kiderült, hogy az 1960-as évektől az 1990-es évekig egy ember, Stefan Mandel 14 alkalommal tudott nyerni a lottón. És az a helyzet, hogy a szerencsének semmi köze nem volt hozzá. Az akkor legális módszerekkel egyszerűen kivívta a lottót.           És így tudta megtenni.</p>
         <p class="golyoszoveg">2. történet</p>
-
+            <p class="tortenet">Stefan Mandel nem az átlagos ember. Romániából származó Mandel matematikus és befektetési szesz. Milliós beruházásokat hajtott végre a világ minden tájáról, és biztosítani tudta, hogy ügyfelei is milliókat szerezzenek. Hogyan csinálja? Mibe fektet? És még mindig lehetséges, hogy csatlakozzunk a befektetési alapjához? Nos, a válasz enyhén szólva elég őrült.</p>
             
         </div>
 
