--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             <ul>
                 <li>
-                    <a href="index.html">Korábbi sorsolások</a>
+                    <a href="index.html">Korábbi sorsolások</a> 
                 </li>
                 <li>
                     <a href="leggyakoribbszamok.html">Leggyakoribb számok</a>
@@ -52,9 +52,9 @@
         
         <br>
 
-        <p class="golyoszoveg">Az elöző heti nyerőszámok</p>
+        <p class="golyoszoveg">Az előző heti nyerőszámok</p>
 
-        <p class="golyoszoveg">Az múlt heti nyerőszámok</p>
+        <p class="golyoszoveg">Az előző elötti heti nyerőszámok</p>
 
             
         </div>
