--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <br>
 
         <p class="golyoszoveg">Az előző heti nyerőszámok</p>
-
-        <p class="golyoszoveg">Az előző elötti heti nyerőszámok</p>
+            <img class="kkics" src="./30.png" alt=""> <img class="kkics" src="54" alt=""> <img class="kkics" src="55" alt=""> <img class="kkics" src="81" alt=""> <img class="kkics" src="89" alt="">
+        <p class="golyoszoveg">Az előző előtti heti nyerőszámok</p>
 
             
         </div>
