HAHA képek go brrrr

--- a/leghasonlobbszamsorok.html
+++ b/leghasonlobbszamsorok.html
@@ -53,6 +53,7 @@
         <br>
 
         <p class="golyoszoveg">1. leghasonlóbb számsor</p>
+        <img class="kkics" src="./52.516" alt=""> <img class="kkics" src="./81.516" alt=""> <img class="kkics" src="./54.516" alt=""> <img class="kkics" src="./89.516" alt=""> <img class="kkics" src="./37.516" alt="">
 
         <p class="golyoszoveg">2. leghasonlóbb számsor</p>
 
