--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <br>
 
         <p class="golyoszoveg">Az előző heti nyerőszámok</p>
-            <img class="kkics" src="./30.png" alt=""> <img class="kkics" src="./54" alt=""> <img class="kkics" src="./55" alt=""> <img class="kkics" src="./81" alt=""> <img class="kkics" src="./89" alt="">
+           <p id="behuzas"> <img class="kkics" src="./30.png" alt=""> <img class="kkics" src="./54" alt=""> <img class="kkics" src="./55" alt=""> <img class="kkics" src="./81" alt=""> <img class="kkics" src="./89" alt=""></p>
         <p class="golyoszoveg">Az előző előtti heti nyerőszámok</p>
-            <img class="kkics" src="./30ee" alt=""> <img class="kkics" src="./57ee" alt=""> <img class="kkics" src="./58ee" alt=""> <img class="kkics" src="./61ee" alt=""> <img class="kkics" src="86ee" alt="">
+           <p id="behuzas"> <img class="kkics" src="./30ee" alt=""> <img class="kkics" src="./57ee" alt=""> <img class="kkics" src="./58ee" alt=""> <img class="kkics" src="./61ee" alt=""> <img class="kkics" src="86ee" alt=""></p>
 
             
         </div>
