--- a/leghasonlobbszamsorok.html
+++ b/leghasonlobbszamsorok.html
@@ -56,6 +56,7 @@
         <img class="kkics" src="./52.516" alt=""> <img class="kkics" src="./81.516" alt=""> <img class="kkics" src="./54.516" alt=""> <img class="kkics" src="./89.516" alt=""> <img class="kkics" src="./37.516" alt="">
 
         <p class="golyoszoveg">2. leghasonlóbb számsor</p>
+        <img class="kkics" src="./55.03" alt=""> <img class="kkics" src="./89.03" alt=""> <img class="kkics" src="./30.03" alt=""> <img class="kkics" src="./81.03" alt=""> <img class="kkics" src="./45.03" alt="">
 
             
         </div>
