--- a/leghosszabsorozat.html
+++ b/leghosszabsorozat.html
@@ -49,9 +49,10 @@
         <br>
 
         <p class="golyoszoveg">4 egymást követő szám</p>
+        <img class="kkics" src="./10ko" alt=""> <img class="kkics" src="./13ko" alt=""> <img class="kkics" src="./60ko" alt=""> <img class="kkics" src="./61ko" alt=""> <img class="kkics" src="./62ko" alt="">
 
         <p class="golyoszoveg">3 egymást követő szám</p>
-
+        <img class="kkics" src="" alt="">
         <p class="golyoszoveg">3 egymást követő szám</p>
 
             
