Az összes kép feltöltése

--- a/legkisebbosszeg.html
+++ b/legkisebbosszeg.html
@@ -53,8 +53,13 @@
         <br>
 
         <p class="golyoszoveg">1. számsor</p>
+        <p id="behuzas"> <img class="kkics" src="./ujfeltoltes/1legk" alt=""> <img class="kkics" src="./ujfeltoltes/12legk" alt=""> <img class="kkics" src="./ujfeltoltes/13legk" alt=""> <img class="kkics" src="./ujfeltoltes/15legk" alt=""> <img class="kkics" src="./ujfeltoltes/26legk" alt=""></p>
 
         <p class="golyoszoveg">2. számsor</p>
+        <p id="behuzas"> <img class="kkics" src="./ujfeltoltes/1legkö" alt=""> <img class="kkics" src="./ujfeltoltes/2legkö" alt=""> <img class="kkics" src="./ujfeltoltes/5legkö" alt=""> <img class="kkics" src="./ujfeltoltes/15legkö" alt=""> <img class="kkics" src="./ujfeltoltes/45legkö" alt=""></p>
+
+        <p class="golyoszoveg">3. számsor</p>
+        <p id="behuzas"> <img class="kkics" src="./ujfeltoltes/1legk" alt=""> <img class="kkics" src="./ujfeltoltes/9legkö3" alt=""> <img class="kkics" src="./ujfeltoltes/11legkö3" alt=""> <img class="kkics" src="./ujfeltoltes/19legkö3" alt=""> <img class="kkics" src="./ujfeltoltes/41legkö3" alt=""></p>
 
             
         </div>
