--- a/leghosszabsorozat.html
+++ b/leghosszabsorozat.html
@@ -51,6 +51,9 @@
         <p class="golyoszoveg">3 egymást követő szám</p>
         <p id="behuzas"><img class="kkics" src="./10ko" alt=""> <img class="kkics" src="./13ko" alt=""> <img class="kkics" src="./60ko" alt=""> <img class="kkics" src="./61ko" alt=""> <img class="kkics" src="./62ko" alt=""></p>
         <p class="golyoszoveg">3 egymást követő szám</p>
+        <p id="behuzas"><img class="kkics" src="./ujfeltoltes/9legkö3" alt=""> <img class="kkics" src="./régi képek/10ko" alt=""> 
+        <img class="kkics" src="./ujfeltoltes/11legkö3" alt=""> <img class="kkics" src="./régi képek/73.9k" alt="">
+        <img class="kkics" src="./régi képek/90.9k" alt=""></p>
             
         </div>
 
