Képek keresési heléynek fixálása

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
         <p class="golyoszoveg">Az előző heti nyerőszámok</p>
         <p id="behuzas">
-            <img class="kkics" src="./30.png" alt=""> <img class="kkics" src="./54.png" alt=""> <img class="kkics" src="./55.png" alt=""> <img class="kkics" src="./81.png" alt=""> <img class="kkics" src="./89.png" alt="">
+            <img class="kkics" src="./régi képek/30.png" alt=""> <img class="kkics" src="./régi képek/54.png" alt=""> <img class="kkics" src="./régi képek/55.png" alt=""> <img class="kkics" src="./régi képek/81.png" alt=""> <img class="kkics" src="./régi képek/89.png" alt="">
         </p>
         <p class="golyoszoveg">Az előző előtti heti nyerőszámok</p>
-           <p id="behuzas"> <img class="kkics" src="./30ee" alt=""> <img class="kkics" src="./57ee" alt=""> <img class="kkics" src="./58ee" alt=""> <img class="kkics" src="./61ee" alt=""> <img class="kkics" src="86ee" alt=""></p>
+           <p id="behuzas"> <img class="kkics" src="./régi képek/30ee" alt=""> <img class="kkics" src="./régi képek/57ee" alt=""> <img class="kkics" src="./régi képek/58ee" alt=""> <img class="kkics" src="./régi képek/61ee" alt=""> <img class="kkics" src="./régi képek/86ee" alt=""></p>
 
             
         </div>
