--- a/leggyakoribbszamok.html
+++ b/leggyakoribbszamok.html
@@ -50,11 +50,11 @@
         
         <br>
 
-        <p class="golyoszoveg">#1 <img class="golyo" src="./3legg"> 218 db</p>
+        <p class="golyoszoveg">#1 <img class="golyo" src="./régi képek/3legg"> 218 db</p>
 
-        <p class="golyoszoveg">#2 <img class="golyo" src="./1legg"> 209 db</p>
+        <p class="golyoszoveg">#2 <img class="golyo" src="./régi képek/1legg"> 209 db</p>
 
-        <p class="golyoszoveg">#3 <img class="golyo" src="./29legg"> 208 db</p>
+        <p class="golyoszoveg">#3 <img class="golyo" src="./régi képek/29legg"> 208 db</p>
 
             
         </div>
