--- a/leghasonlobbszamsorok.html
+++ b/leghasonlobbszamsorok.html
@@ -53,10 +53,10 @@
         <br>
 
         <p class="golyoszoveg">1. leghasonlóbb számsor</p>
-        <p id="behuzas"><img class="kkics" src="./52.516" alt=""> <img class="kkics" src="./81.516" alt=""> <img class="kkics" src="./54.516" alt=""> <img class="kkics" src="./89.516" alt=""> <img class="kkics" src="./37.516" alt=""></p>
+        <p id="behuzas"><img class="kkics" src="./régi képek/52.516" alt=""> <img class="kkics" src="./régi képek/81.516" alt=""> <img class="kkics" src="./régi képek/54.516" alt=""> <img class="kkics" src="./régi képek/89.516" alt=""> <img class="kkics" src="./régi képek/37.516" alt=""></p>
 
         <p class="golyoszoveg">2. leghasonlóbb számsor</p>
-        <p id="behuzas"><img class="kkics" src="./55.03" alt=""> <img class="kkics" src="./89.03" alt=""> <img class="kkics" src="./30.03" alt=""> <img class="kkics" src="./81.03" alt=""> <img class="kkics" src="./45.03" alt=""></p>
+        <p id="behuzas"><img class="kkics" src="./régi képek/55.03" alt=""> <img class="kkics" src="./régi képek/89.03" alt=""> <img class="kkics" src="./régi képek/30.03" alt=""> <img class="kkics" src="./régi képek/81.03" alt=""> <img class="kkics" src="./régi képek/45.03" alt=""></p>
 
             
         </div>
